# LUMOS

./: CMakeLists.txt  hello_test.cpp  readme.md
bindings/: CMakeLists.txt
include/: decomposition.h  eigen.h  exceptions.h  matrix.h  operations.h  vector.h
src/: decomposition.cpp  vector.cpp
